--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -8,9 +8,9 @@
 
 	<script src="src/vendor/underscore.js"></script>
 	<script src="src/vendor/backbone.js"></script>
+	<script src="src/vendor/deferred.js"></script> <!-- no need of jQuery -->
 
-
-	<script src="src/util.js"></script>
+	<script src="src/util/util.js"></script>
 
 	<script src="src/model/job-application.js"></script>
 	<script src="src/model/job-application-list.js"></script>
