Refactored into getJobApplicationHandler()

--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -9,6 +9,7 @@
 	<script src="src/vendor/underscore.js"></script>
 	<script src="src/vendor/backbone.js"></script>
 	<script src="src/vendor/deferred.js"></script> <!-- no need of jQuery -->
+	<script src="src/vendor/moment.min.js"></script> <!-- no need of jQuery -->
 
 	<script src="src/util/util.js"></script>
 
