Adding support for CSV/HTML reporting

--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -31,6 +31,8 @@
 	<script src="src/entity/employer-entity.js"></script>
 	<script src="src/entity/job-seeker-entity.js"></script>
 
+	<script src="src/reporting/formatter.js"></script>
+
 	<script src="src/mini-ladders.js"></script>
 	
 	<script>
