Cleaned up for HTML/CSV reporting

--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -31,7 +31,9 @@
 	<script src="src/entity/employer-entity.js"></script>
 	<script src="src/entity/job-seeker-entity.js"></script>
 
-	<script src="src/reporting/formatter.js"></script>
+	<script src="src/reporting/report-delimiter.js"></script>
+	<script src="src/reporting/report-builder.js"></script>
+	<script src="src/reporting/reporter.js"></script>
 
 	<script src="src/mini-ladders.js"></script>
 	
