--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -33,6 +33,7 @@
 
 	<script src="src/reporting/report-delimiter.js"></script>
 	<script src="src/reporting/report-builder.js"></script>
+	<script src="src/reporting/tabular-adapter.js"></script>
 	<script src="src/reporting/reporter.js"></script>
 
 	<script src="src/mini-ladders.js"></script>
