Creating iter folders to keep different iterations

--- a/mini-ladders.html
+++ b/mini-ladders.html
@@ -6,32 +6,32 @@
 </head>
 <body>
 
-	<script src="src/vendor/underscore.js"></script>
-	<script src="src/vendor/backbone.js"></script>
-	<script src="src/vendor/deferred.js"></script> <!-- no need of jQuery -->
-	<script src="src/vendor/moment.min.js"></script> <!-- no need of jQuery -->
+	<script src="vendor/underscore.js"></script>
+	<script src="vendor/backbone.js"></script>
+	<script src="vendor/deferred.js"></script> <!-- no need of jQuery -->
+	<script src="vendor/moment.min.js"></script> <!-- no need of jQuery -->
 
-	<script src="src/util/util.js"></script>
+	<script src="iter2/src/util/util.js"></script>
 
-	<script src="src/model/job-application.js"></script>
-	<script src="src/model/job-application-list.js"></script>
-	<script src="src/model/employer.js"></script>
-	<script src="src/model/job-seeker-field.js"></script>
-	<script src="src/model/job-seeker.js"></script>
-	<script src="src/model/job-field.js"></script>
-	<script src="src/model/job.js"></script>
-	<script src="src/model/resume-field.js"></script>
-	<script src="src/model/resume.js"></script>
+	<script src="iter2/src/model/job-application.js"></script>
+	<script src="iter2/src/model/job-application-list.js"></script>
+	<script src="iter2/src/model/employer.js"></script>
+	<script src="iter2/src/model/job-seeker-field.js"></script>
+	<script src="iter2/src/model/job-seeker.js"></script>
+	<script src="iter2/src/model/job-field.js"></script>
+	<script src="iter2/src/model/job.js"></script>
+	<script src="iter2/src/model/resume-field.js"></script>
+	<script src="iter2/src/model/resume.js"></script>
 
-	<script src="src/reporting/report-delimiter.js"></script>
-	<script src="src/reporting/report-builder.js"></script>
-	<script src="src/reporting/tabular-adapter.js"></script>
-	<script src="src/reporting/reporter.js"></script>
+	<script src="iter2/src/reporting/report-delimiter.js"></script>
+	<script src="iter2/src/reporting/report-builder.js"></script>
+	<script src="iter2/src/reporting/tabular-adapter.js"></script>
+	<script src="iter2/src/reporting/reporter.js"></script>
 
-	<script src="src/entity/employer-entity.js"></script>
-	<script src="src/entity/job-seeker-entity.js"></script>
+	<script src="iter2/src/entity/employer-entity.js"></script>
+	<script src="iter2/src/entity/job-seeker-entity.js"></script>
 
-	<script src="src/mini-ladders.js"></script>
+	<script src="iter2/src/mini-ladders.js"></script>
 	
 	<script>
 	</script>
