--- a/reporter.html
+++ b/reporter.html
@@ -9,9 +9,13 @@
 	<script src="vendor/underscore.js"></script>
 	<script src="vendor/backbone.js"></script>
 	<script src="vendor/deferred.js"></script> <!-- no need of jQuery -->
-	<script src="vendor/moment.min.js"></script> <!-- no need of jQuery -->
+	<script src="vendor/moment.min.js"></script> 
 
+	<script src="iter3/src/model/base.js"></script>
+	<script src="iter3/src/model/job.js"></script>
+	<script src="iter3/src/model/employer.js"></script>
 	<script src="iter3/src/reporter.js"></script>
+
 	<script src="iter3/src/reporter-test.js"></script>
 
 	<script>
