Preparing for Iteration4: Listener for ReportBuilder

--- a/iter3.html
+++ b/iter3.html
@@ -11,17 +11,21 @@
 	<script src="vendor/deferred.js"></script> <!-- no need of jQuery -->
 	<script src="vendor/moment.min.js"></script> 
 
-	<script src="iter3/src/model/base.js"></script>
+	<script src="iter3/src/util/util.js"></script>
+	<script src="iter3/src/util/base.js"></script>
+	<script src="iter3/src/util/date.js"></script>
+
 	<script src="iter3/src/model/job.js"></script>
 	<script src="iter3/src/model/employer.js"></script>
-	<script src="iter3/src/reporter.js"></script>
+	<script src="iter3/src/model/job-application.js"></script>
+
+	<script src="iter3/src/reporting/reporter.js"></script>
 
 	<script src="iter3/src/reporter-test.js"></script>
 
 	<script>
 
 	// alert("Hello");
-
 	</script>
 	
 </body>
