--- a/iter4.html
+++ b/iter4.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+	<script src="vendor/lucid.js"></script>
 	<script src="vendor/underscore.js"></script>
 	<script src="vendor/backbone.js"></script>
 	<script src="vendor/deferred.js"></script> <!-- no need of jQuery -->
